# atlas

./: .envrc.template  .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  atlask.py  flake.nix  go.mod  go.sum  makefile  pyproject.toml
.github/workflows/: release.yml
cmd/atlas/: bitbucket.go  confluence.go  get.go  input.go  main.go  root.go  version.go
internal/bitbucket/: cache.go  client.go  client_test.go  errors.go  types.go
internal/cli/: config.go  pr.go  root.go  snippet.go
internal/config/: config.go
internal/confluence/: client.go  client_test.go
internal/convert/: convert.go  convert_test.go
internal/document/: document.go
internal/git/: checkout.go  remote.go
internal/httpclient/: client.go
internal/output/: comments.go  diff.go  json.go  markdown.go  output.go  output_test.go  table.go  tasks.go
internal/parse/: parse.go  parse_test.go
internal/worker/: pool.go
nix/: hm-module.nix
